# telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  get_chat_id.py  pyproject.toml  requirements.txt  setup.py
bot/: __init__.py  __main__.py  api.py  cli.py  main.py
bot/config/: __init__.py
bot/constants/: __init__.py
bot/handlers/: __init__.py  commands.py
bot/keyboards/: __init__.py
bot/middlewares/: __init__.py
bot/services/: __init__.py  monitoring.py  notification.py  scheduler.py  subscription.py
bot/utils/: __init__.py  formatters.py  retry.py  validators.py
examples/: application_notifications.py  cli_usage.py  scheduled_notifications.py  webhook_notifications.py
examples/integrations/: README.md  celery_example.py  django_example.py  fastapi_example.py  flask_example.py
telegram_notifier/: README.md  __init__.py  config.py  notification.py
tests/: __init__.py  test_api.py  test_basic.py  test_cli.py  test_handlers_commands.py  test_init.py  test_integration.py  test_main.py  test_performance.py  test_security.py  test_services_monitoring.py  test_services_notification.py  test_services_scheduler.py  test_services_subscription.py  test_utils_formatters.py  test_utils_retry.py  test_utils_validators.py
